# seg-based-tracking

./: CMakeLists.txt
module/: CMakeLists.txt
module/inference_engine/: CMakeLists.txt
module/inference_engine/include/: inference_engine.h
module/inference_engine/src/: inference_engine.cpp
module/tracker/: CMakeLists.txt
module/tracker/include/: tracker.h
module/tracker/src/: tracker.cpp
sample/: CMakeLists.txt  sample.cpp  visualize.cpp
